--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -20,5 +20,8 @@
       "IncludeScopes": true
     }
   },
+  "DeviceServiceApi":{
+    "BaseAddress": "http://localhost:5214"
+  },
   "AllowedHosts": "*"
 }
