--- a/React_FE/nginx.conf
+++ b/React_FE/nginx.conf
@@ -1,10 +1,16 @@
 server {
-    listen 80;
+    listen 81;
 
     location / {
         proxy_pass http://react:3000;
     }
-
+    location /chatHub/ {
+        proxy_pass http://userservice:5109/chatHub/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
+    }
     location /userservice/ {
         proxy_pass http://userservice:5109/;
     }
@@ -12,4 +18,9 @@ server {
     location /deviceservice/ {
         proxy_pass http://deviceservice:5214/;
     }
+
+    location /monitoringcomservice/ {
+        proxy_pass http://monitoringcomservice:5249/;
+    }
 }
+
