--- a/React_FE/docker-compose.yml
+++ b/React_FE/docker-compose.yml
@@ -5,11 +5,13 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "80:80"
+      - "81:81"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - demo_net
+    environment:
+      - WDS_SOCKET_PORT=0
 
   # React Frontend Service
   react:
@@ -18,6 +20,8 @@ services:
       dockerfile: Dockerfile
     networks:
       - demo_net
+    environment:
+      - WDS_SOCKET_PORT=0
 
 networks:
   demo_net:
