--- a/React_FE/package.json
+++ b/React_FE/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/signalr": "^8.0.0",
     "axios": "^1.5.1",
     "bootstrap": "^4.3.1",
+    "chart.js": "^4.4.0",
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.4",
     "react": "^16.8.0",
     "react-bootstrap": "^1.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^16.8.0",
     "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^5.0.1",
     "react-table": "^6.10.0",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^7.0.2",
     "recharts": "^2.9.0"
   },
